Updated person photo

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -48,7 +48,7 @@ profJang:
   role: grad
   course: PhD Course
   bio: "AI-based Crime Investigation System"
-  image: /img/people/Minjin.jpg
+  image: /img/people/Ari.jpg
 
 2021yeri:
   display_name: "구예리 (Yeri, Gu)"
