--- a/_data/people.yml
+++ b/_data/people.yml
@@ -129,21 +129,21 @@ profJang:
 2018minjin:
   display_name: "박민진 (Minjin, Park)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf>A Study on the malicious targeting of IoT devices</a>"
+  bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf'>A Study on the malicious targeting of IoT devices</a>"
   image: /img/people/Minjin.jpg
   linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
 
 2018jiyoon:
   display_name: "함지윤 (Jiyoon, Ham)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf>A Study on Digital Forensic Data Acquisition Tools</a>"
+  bio: "MSc, 2019: <a href='/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf'>A Study on Digital Forensic Data Acquisition Tools</a>"
   image: /img/people/Jiyoon.jpg
   linkedin: https://www.linkedin.com/in/jiyoon-ham-9a41a017a
 
 2019sungmi:
   display_name: "박성미 (Sungmi, Park)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf>Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>"
+  bio: "MSc, 2019: <a href='/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf'>Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>"
   image: /img/people/Sungmi.jpg
   linkedin: https://www.linkedin.com/in/sungmi-park-5560b0147
 
