--- a/_data/people.yml
+++ b/_data/people.yml
@@ -143,14 +143,14 @@ profJang:
 2019sungmi:
   display_name: "박성미 (Sungmi, Park)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf'>Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>"
+  bio: "MSc, 2021: <a href='/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf'>Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>"
   image: /img/people/Sungmi.jpg
   linkedin: https://www.linkedin.com/in/sungmi-park-5560b0147
 
 2018terrence:
   display_name: "Terrence Nemayire"
   role: alum
-  bio: "IoT Digital Forensic Investigation"
+  bio: "MSc, 2020"
   image: /img/people/Terrence.png
   linkedin: https://www.linkedin.com/in/terrence-nemayire-3b944b18b
   twitter: "https://twitter.com/terrynema"
@@ -159,21 +159,21 @@ profJang:
 2018alex:
   display_name: "Alex Ocheme Ogbole"
   role: alum
-  bio: "IoT Digital Forensic Investigation"
+  bio: "MSc, 2020"
   image: /img/people/Alex.jpg
   linkedin: https://www.linkedin.com/in/alex-ogbole-8b0b6571
 
 2019luckson:
   display_name: "Luckson Zvirikuzhe"
   role: alum
-  bio: "IoT Digital Forensic Investigation"
+  bio: "Msc, 2021"
   image: /img/people/Luckson.jpg
   linkedin:
 
 2019tony:
   display_name: "Onche Anthony Inalegwu"
   role: alum
-  bio: "IoT Digital Forensic Investigation"
+  bio: "Msc, 2021"
   image: /img/people/Tony.jpg
   linkedin: https://linkedin.com/in/tonyjokeapart
 
