--- a/_data/people.yml
+++ b/_data/people.yml
@@ -58,7 +58,7 @@ profJang:
   image: /img/people/Yeri.jpg
 
 2022yeri:
-  display_name: "박지원 (Jiwon, Park)"
+  display_name: "박지원 (Jee Won, Park)"
   role: grad
   course: MSc Course
   bio: "AI-based Crime Investigation System"
