--- a/_data/people.yml
+++ b/_data/people.yml
@@ -101,21 +101,21 @@ profJang:
 2019addisu:
   display_name: "Birhanu Addisu Afework"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/birhanu2019.pdf'>Smart Home IoT Forensics: Study on Data Security and Challenges to Data Acquisition</a>"
+  bio: "MSc, 2019: <a href='/pubs/birhanu_smarthome_2019.pdf'>Smart Home IoT Forensics: Study on Data Security and Challenges to Data Acquisition</a>"
   image: /img/people/Addisu.jpg
   linkedin: https://www.linkedin.com/in/addisu-afework-4434831a
 
 2019subong:
   display_name: "장수봉 (Subong, Jang)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/jang2019.pdf'>A Study on Internet of Things (IoT) Forensics</a>"
+  bio: "MSc, 2019: <a href='/pubs/jang_studyinternet_2019.pdf'>A Study on Internet of Things (IoT) Forensics</a>"
   image: /img/people/Subong.jpg
   linkedin: https://kr.linkedin.com/in/subong-jang-54779aab
 
 2019betty:
   display_name: "Ajayi Betty Bukola"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/bukola2019.pdf'>A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>"
+  bio: "MSc, 2019: <a href='/pubs/bukola_studymla_2019.pdf'>A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>"
   image: /img/people/Betty.jpg
   linkedin: "https://www.linkedin.com/in/betty-bukola-ajayi-9033b99a/"
 
@@ -129,21 +129,21 @@ profJang:
 2018minjin:
   display_name: "박민진 (Minjin, Park)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/park_studymalicioustargeting_2019.pdf'>A Study on the malicious targeting of IoT devices</a>"
+  bio: "MSc, 2019: <a href='/pubs/park_studymalicious_2019.pdf'>A Study on the malicious targeting of IoT devices</a>"
   image: /img/people/Minjin.jpg
   linkedin: https://www.linkedin.com/in/min-jin-park-07719917a/
 
 2018jiyoon:
   display_name: "함지윤 (Jiyoon, Ham)"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/ham_studydigitalforensic_2019.pdf'>A Study on Digital Forensic Data Acquisition Tools</a>"
+  bio: "MSc, 2019: <a href='/pubs/ham_studydigital_2019.pdf'>A Study on Digital Forensic Data Acquisition Tools</a>"
   image: /img/people/Jiyoon.jpg
   linkedin: https://www.linkedin.com/in/jiyoon-ham-9a41a017a
 
 2019sungmi:
   display_name: "박성미 (Sungmi, Park)"
   role: alum
-  bio: "MSc, 2021: <a href='/pubs/park_alternativehypothesisretrieval_2020.pdf'>Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>"
+  bio: "MSc, 2021: <a href='/pubs/park_alternativehypothesis_2020.pdf'>Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>"
   image: /img/people/Sungmi.jpg
   linkedin: https://www.linkedin.com/in/sungmi-park-5560b0147
 
