fixed people yml

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -94,7 +94,7 @@ profJang:
 2019yohannes:
   display_name: "Yohannes Yemane Brhan"
   role: alum
-  bio: "MSc, 2019: <a href='/pubs/brhan2019.pdf'>API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices</a>"
+  bio: "MSc, 2019: <a href='/pubs/brhan_apibasedcloud_2019.pdf'>API-based Cloud Data Acquisition and Analysis from Smart Home IoT Devices</a>"
   image: /img/people/Yohannes.jpg
   linkedin: "https://www.linkedin.com/in/yohannes-yemane-brhan-70433470"
 
