--- a/_data/people.yml
+++ b/_data/people.yml
@@ -57,7 +57,7 @@ profJang:
   bio: "AI-based Crime Investigation System"
   image: /img/people/Yeri.jpg
 
-2022yeri:
+2022jeewon:
   display_name: "박지원 (Jiwon, Park)"
   role: grad
   course: MSc Course
