--- a/_data/people.yml
+++ b/_data/people.yml
@@ -181,7 +181,7 @@ profJang:
   display_name: "김서희 (Seo Hee, Kim)"
   role: staff
   bio: "AI-based Crime Investigation System"
-  image: /img/people/Yuna.jpg
+  image: /img/people/GMD.png
 
 HancomGMD:
   display_name: "Hancom GMD"
