Changed (Yeri,Ari) and added (Myunhoon) photos

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -181,7 +181,7 @@ profJang:
   display_name: "우명훈 (Myung Hoon, Woo)"
   role: staff
   bio: "Administrator"
-  image: /img/people/Staff.jpg
+  image: /img/people/Myunghoon.jpg
 
 2021siwon:
   display_name: "김시원 (Si Won, Kim)"
